@@ -56,7 +56,6 @@ import org.l2jmobius.gameserver.ai.SummonAI;
 import org.l2jmobius.gameserver.cache.RelationCache;
 import org.l2jmobius.gameserver.communitybbs.BB.Forum;
 import org.l2jmobius.gameserver.communitybbs.Manager.ForumsBBSManager;
-import org.l2jmobius.gameserver.data.ItemTable;
 import org.l2jmobius.gameserver.data.sql.CharInfoTable;
 import org.l2jmobius.gameserver.data.sql.CharSummonTable;
 import org.l2jmobius.gameserver.data.sql.ClanTable;
@@ -68,6 +67,7 @@ import org.l2jmobius.gameserver.data.xml.ClassListData;
 import org.l2jmobius.gameserver.data.xml.CollectionData;
 import org.l2jmobius.gameserver.data.xml.ExperienceData;
 import org.l2jmobius.gameserver.data.xml.HennaData;
+import org.l2jmobius.gameserver.data.xml.ItemData;
 import org.l2jmobius.gameserver.data.xml.NpcData;
 import org.l2jmobius.gameserver.data.xml.NpcNameLocalisationData;
 import org.l2jmobius.gameserver.data.xml.OptionData;
@@ -530,7 +530,7 @@ public class Player extends Playable
 	/** The PvP Flag state of the Player (0=White, 1=Purple) */
 	private byte _pvpFlag;
 	
-	private final List<DamageTakenHolder> _lastDamageTaken = new ArrayList<>(21);
+	private final LinkedList<DamageTakenHolder> _lastDamageTaken = new LinkedList<>();
 	
 	/** The Fame of this Player */
 	private int _fame;
@@ -655,7 +655,7 @@ public class Player extends Playable
 	private boolean _simulatedTalking = false;
 	
 	/** The table containing all Quests began by the Player */
-	private final Map<String, QuestState> _quests = new ConcurrentHashMap<>();
+	private final Map<String, QuestState> _quests = new ConcurrentSkipListMap<>(String.CASE_INSENSITIVE_ORDER);
 	
 	/** The list containing all shortCuts of this player. */
 	private final ShortCuts _shortCuts = new ShortCuts(this);
@@ -2679,55 +2679,55 @@ public class Player extends Playable
 		if ((classId >= 0x00) && (classId <= 0x09))
 		{
 			// human fighter fists
-			final ItemTemplate temp = ItemTable.getInstance().getTemplate(246);
+			final ItemTemplate temp = ItemData.getInstance().getTemplate(246);
 			weaponItem = (Weapon) temp;
 		}
 		else if ((classId >= 0x0a) && (classId <= 0x11))
 		{
 			// human mage fists
-			final ItemTemplate temp = ItemTable.getInstance().getTemplate(251);
+			final ItemTemplate temp = ItemData.getInstance().getTemplate(251);
 			weaponItem = (Weapon) temp;
 		}
 		else if ((classId >= 0x12) && (classId <= 0x18))
 		{
 			// elven fighter fists
-			final ItemTemplate temp = ItemTable.getInstance().getTemplate(244);
+			final ItemTemplate temp = ItemData.getInstance().getTemplate(244);
 			weaponItem = (Weapon) temp;
 		}
 		else if ((classId >= 0x19) && (classId <= 0x1e))
 		{
 			// elven mage fists
-			final ItemTemplate temp = ItemTable.getInstance().getTemplate(249);
+			final ItemTemplate temp = ItemData.getInstance().getTemplate(249);
 			weaponItem = (Weapon) temp;
 		}
 		else if ((classId >= 0x1f) && (classId <= 0x25))
 		{
 			// dark elven fighter fists
-			final ItemTemplate temp = ItemTable.getInstance().getTemplate(245);
+			final ItemTemplate temp = ItemData.getInstance().getTemplate(245);
 			weaponItem = (Weapon) temp;
 		}
 		else if ((classId >= 0x26) && (classId <= 0x2b))
 		{
 			// dark elven mage fists
-			final ItemTemplate temp = ItemTable.getInstance().getTemplate(250);
+			final ItemTemplate temp = ItemData.getInstance().getTemplate(250);
 			weaponItem = (Weapon) temp;
 		}
 		else if ((classId >= 0x2c) && (classId <= 0x30))
 		{
 			// orc fighter fists
-			final ItemTemplate temp = ItemTable.getInstance().getTemplate(248);
+			final ItemTemplate temp = ItemData.getInstance().getTemplate(248);
 			weaponItem = (Weapon) temp;
 		}
 		else if ((classId >= 0x31) && (classId <= 0x34))
 		{
 			// orc mage fists
-			final ItemTemplate temp = ItemTable.getInstance().getTemplate(252);
+			final ItemTemplate temp = ItemData.getInstance().getTemplate(252);
 			weaponItem = (Weapon) temp;
 		}
 		else if ((classId >= 0x35) && (classId <= 0x39))
 		{
 			// dwarven fists
-			final ItemTemplate temp = ItemTable.getInstance().getTemplate(247);
+			final ItemTemplate temp = ItemData.getInstance().getTemplate(247);
 			weaponItem = (Weapon) temp;
 		}
 		return weaponItem;
@@ -3479,7 +3479,7 @@ public class Player extends Playable
 	{
 		if (count > 0)
 		{
-			final ItemTemplate item = ItemTable.getInstance().getTemplate(itemId);
+			final ItemTemplate item = ItemData.getInstance().getTemplate(itemId);
 			if (item == null)
 			{
 				LOGGER.severe("Item doesn't exist so cannot be added. Item ID: " + itemId);
@@ -4492,7 +4492,7 @@ public class Player extends Playable
 	 */
 	public void doAutoLoot(Attackable target, int itemId, long itemCount)
 	{
-		if (isInParty() && !ItemTable.getInstance().getTemplate(itemId).hasExImmediateEffect())
+		if (isInParty() && !ItemData.getInstance().getTemplate(itemId).hasExImmediateEffect())
 		{
 			_party.distributeItem(this, itemId, itemCount, false, target);
 		}
@@ -4642,7 +4642,7 @@ public class Player extends Playable
 			{
 				handler.useItem(this, target, false);
 			}
-			ItemTable.getInstance().destroyItem("Consume", target, this, null);
+			ItemData.getInstance().destroyItem("Consume", target, this, null);
 		}
 		// Cursed Weapons are not distributed
 		else if (CursedWeaponsManager.getInstance().isCursed(target.getId()))
@@ -4683,7 +4683,7 @@ public class Player extends Playable
 			else if ((target.getId() == Inventory.ADENA_ID) && (_inventory.getAdenaInstance() != null))
 			{
 				addAdena("Pickup", target.getCount(), null, true);
-				ItemTable.getInstance().destroyItem("Pickup", target, this, null);
+				ItemData.getInstance().destroyItem("Pickup", target, this, null);
 			}
 			else
 			{
@@ -5214,7 +5214,7 @@ public class Player extends Playable
 			_lastDamageTaken.add(new DamageTakenHolder(attacker, skillId, damage));
 			if (_lastDamageTaken.size() > 20)
 			{
-				_lastDamageTaken.remove(0);
+				_lastDamageTaken.removeFirst();
 			}
 		}
 	}
@@ -8905,12 +8905,14 @@ public class Player extends Playable
 				sm.addSkillName(usedSkill);
 			}
 			
-			// Don't send packet for Raise/Focus Shield if Final Ultimate Defense is active.
-			if ((getEffectList().getBuffInfoBySkillId(10017) == null) && ((usedSkill.getId() == 10020) || (usedSkill.getId() == 10021)))
+			// Don't send packet for Raise/Focus Shield if Final Supreme Defense is active.
+			if ((getEffectList().getBuffInfoBySkillId(10017 /* Supreme Defense */) == null) && ((usedSkill.getId() == 10020 /* Focus Shield */) || (usedSkill.getId() == 10021 /* Raise Shield */)))
 			{
 				sendPacket(sm);
-				return false;
 			}
+			
+			sendPacket(ActionFailed.STATIC_PACKET);
+			return false;
 		}
 		
 		// Check if the caster is sitting
@@ -9322,7 +9324,7 @@ public class Player extends Playable
 	{
 		for (int itemId : _activeSoulShots)
 		{
-			if (ItemTable.getInstance().getTemplate(itemId).getCrystalType().getLevel() == crystalType)
+			if (ItemData.getInstance().getTemplate(itemId).getCrystalType().getLevel() == crystalType)
 			{
 				disableAutoShot(itemId);
 			}
@@ -10656,14 +10658,6 @@ public class Player extends Playable
 			restoreEffects();
 		}
 		
-		// TODO : Need to fix that hack!
-		if (!isDead())
-		{
-			setCurrentCp(_originalCp);
-			setCurrentHp(_originalHp);
-			setCurrentMp(_originalMp);
-		}
-		
 		if ((_pkKills > 9) && (getReputation() < 0))
 		{
 			World.getInstance().addPkPlayer(this);
@@ -10718,6 +10712,18 @@ public class Player extends Playable
 		{
 			EventDispatcher.getInstance().notifyEventAsync(new OnPlayerMentorStatus(this, true), this);
 		}
+		
+		// TODO : Need to fix that hack!
+		if (!isDead())
+		{
+			// Run on a separate thread to give time to above events to be notified.
+			ThreadPool.schedule(() ->
+			{
+				setCurrentCp(_originalCp);
+				setCurrentHp(_originalHp);
+				setCurrentMp(_originalMp);
+			}, 300);
+		}
 	}
 	
 	public long getLastAccess()
@@ -10735,10 +10741,8 @@ public class Player extends Playable
 	{
 		super.doRevive();
 		
-		if (Config.DISCONNECT_AFTER_DEATH)
-		{
-			DecayTaskManager.getInstance().cancel(this);
-		}
+		// Stop decay task.
+		DecayTaskManager.getInstance().cancel(this);
 		
 		sendPacket(new EtcStatusUpdate(this));
 		_revivePet = false;
@@ -15004,19 +15008,19 @@ public class Player extends Playable
 				final Skill knownSkill = getKnownSkill(shortcut.getId());
 				if (knownSkill != null)
 				{
-					sendPacket(new ExActivateAutoShortcut(shortcut, true));
+					shortcut.setAutoUse(true);
 				}
 			}
 			else if (shortcut.getType() == ShortcutType.ACTION)
 			{
-				sendPacket(new ExActivateAutoShortcut(shortcut, true));
+				shortcut.setAutoUse(true);
 			}
 			else
 			{
 				final Item item = getInventory().getItemByObjectId(shortcut.getId());
 				if (item != null)
 				{
-					sendPacket(new ExActivateAutoShortcut(shortcut, true));
+					shortcut.setAutoUse(true);
 				}
 			}
 		}
@@ -15040,7 +15044,7 @@ public class Player extends Playable
 			
 			if (shortcut.getType() == ShortcutType.ACTION)
 			{
-				sendPacket(new ExActivateAutoShortcut(shortcut, true));
+				shortcut.setAutoUse(true);
 				AutoUseTaskManager.getInstance().addAutoAction(this, shortcut.getId());
 				continue;
 			}
@@ -15049,7 +15053,6 @@ public class Player extends Playable
 			if (knownSkill != null)
 			{
 				shortcut.setAutoUse(true);
-				sendPacket(new ExActivateAutoShortcut(shortcut, true));
 				if (knownSkill.isBad())
 				{
 					AutoUseTaskManager.getInstance().addAutoSkill(this, shortcut.getId());
@@ -15065,7 +15068,6 @@ public class Player extends Playable
 				if (item != null)
 				{
 					shortcut.setAutoUse(true);
-					sendPacket(new ExActivateAutoShortcut(shortcut, true));
 					if (item.isPotion())
 					{
 						AutoUseTaskManager.getInstance().setAutoPotionItem(this, item.getId());
