@@ -58,7 +58,6 @@ import org.l2jmobius.gameserver.ai.SummonAI;
 import org.l2jmobius.gameserver.cache.RelationCache;
 import org.l2jmobius.gameserver.communitybbs.BB.Forum;
 import org.l2jmobius.gameserver.communitybbs.Manager.ForumsBBSManager;
-import org.l2jmobius.gameserver.data.ItemTable;
 import org.l2jmobius.gameserver.data.sql.CharInfoTable;
 import org.l2jmobius.gameserver.data.sql.CharSummonTable;
 import org.l2jmobius.gameserver.data.sql.ClanTable;
@@ -70,6 +69,7 @@ import org.l2jmobius.gameserver.data.xml.ClassListData;
 import org.l2jmobius.gameserver.data.xml.ElementalSpiritData;
 import org.l2jmobius.gameserver.data.xml.ExperienceData;
 import org.l2jmobius.gameserver.data.xml.HennaData;
+import org.l2jmobius.gameserver.data.xml.ItemData;
 import org.l2jmobius.gameserver.data.xml.NpcData;
 import org.l2jmobius.gameserver.data.xml.NpcNameLocalisationData;
 import org.l2jmobius.gameserver.data.xml.PetDataTable;
@@ -517,7 +517,7 @@ public class Player extends Playable
 	/** The PvP Flag state of the Player (0=White, 1=Purple) */
 	private byte _pvpFlag;
 	
-	private final List<DamageTakenHolder> _lastDamageTaken = new ArrayList<>(21);
+	private final LinkedList<DamageTakenHolder> _lastDamageTaken = new LinkedList<>();
 	
 	/** The Fame of this Player */
 	private int _fame;
@@ -646,7 +646,7 @@ public class Player extends Playable
 	private boolean _simulatedTalking = false;
 	
 	/** The table containing all Quests began by the Player */
-	private final Map<String, QuestState> _quests = new ConcurrentHashMap<>();
+	private final Map<String, QuestState> _quests = new ConcurrentSkipListMap<>(String.CASE_INSENSITIVE_ORDER);
 	
 	/** The list containing all shortCuts of this player. */
 	private final ShortCuts _shortCuts = new ShortCuts(this);
@@ -917,6 +917,12 @@ public class Player extends Playable
 	private ScheduledFuture<?> _statIncreaseSkillTask;
 	
 	private final RankingHistory _rankingHistory;
+	
+	private String _mercenaryName;
+	private int _clanIdMercenary;
+	
+	private Clan _clanOg;
+	private int _clanIdOg;
 	
 	private final Map<Integer, PetEvolveHolder> _petEvolves = new HashMap<>();
 	
@@ -2561,55 +2567,55 @@ public class Player extends Playable
 		if ((classId >= 0x00) && (classId <= 0x09))
 		{
 			// human fighter fists
-			final ItemTemplate temp = ItemTable.getInstance().getTemplate(246);
+			final ItemTemplate temp = ItemData.getInstance().getTemplate(246);
 			weaponItem = (Weapon) temp;
 		}
 		else if ((classId >= 0x0a) && (classId <= 0x11))
 		{
 			// human mage fists
-			final ItemTemplate temp = ItemTable.getInstance().getTemplate(251);
+			final ItemTemplate temp = ItemData.getInstance().getTemplate(251);
 			weaponItem = (Weapon) temp;
 		}
 		else if ((classId >= 0x12) && (classId <= 0x18))
 		{
 			// elven fighter fists
-			final ItemTemplate temp = ItemTable.getInstance().getTemplate(244);
+			final ItemTemplate temp = ItemData.getInstance().getTemplate(244);
 			weaponItem = (Weapon) temp;
 		}
 		else if ((classId >= 0x19) && (classId <= 0x1e))
 		{
 			// elven mage fists
-			final ItemTemplate temp = ItemTable.getInstance().getTemplate(249);
+			final ItemTemplate temp = ItemData.getInstance().getTemplate(249);
 			weaponItem = (Weapon) temp;
 		}
 		else if ((classId >= 0x1f) && (classId <= 0x25))
 		{
 			// dark elven fighter fists
-			final ItemTemplate temp = ItemTable.getInstance().getTemplate(245);
+			final ItemTemplate temp = ItemData.getInstance().getTemplate(245);
 			weaponItem = (Weapon) temp;
 		}
 		else if ((classId >= 0x26) && (classId <= 0x2b))
 		{
 			// dark elven mage fists
-			final ItemTemplate temp = ItemTable.getInstance().getTemplate(250);
+			final ItemTemplate temp = ItemData.getInstance().getTemplate(250);
 			weaponItem = (Weapon) temp;
 		}
 		else if ((classId >= 0x2c) && (classId <= 0x30))
 		{
 			// orc fighter fists
-			final ItemTemplate temp = ItemTable.getInstance().getTemplate(248);
+			final ItemTemplate temp = ItemData.getInstance().getTemplate(248);
 			weaponItem = (Weapon) temp;
 		}
 		else if ((classId >= 0x31) && (classId <= 0x34))
 		{
 			// orc mage fists
-			final ItemTemplate temp = ItemTable.getInstance().getTemplate(252);
+			final ItemTemplate temp = ItemData.getInstance().getTemplate(252);
 			weaponItem = (Weapon) temp;
 		}
 		else if ((classId >= 0x35) && (classId <= 0x39))
 		{
 			// dwarven fists
-			final ItemTemplate temp = ItemTable.getInstance().getTemplate(247);
+			final ItemTemplate temp = ItemData.getInstance().getTemplate(247);
 			weaponItem = (Weapon) temp;
 		}
 		return weaponItem;
@@ -3366,7 +3372,7 @@ public class Player extends Playable
 	{
 		if (count > 0)
 		{
-			final ItemTemplate item = ItemTable.getInstance().getTemplate(itemId);
+			final ItemTemplate item = ItemData.getInstance().getTemplate(itemId);
 			if (item == null)
 			{
 				LOGGER.severe("Item doesn't exist so cannot be added. Item ID: " + itemId);
@@ -4371,7 +4377,7 @@ public class Player extends Playable
 	 */
 	public void doAutoLoot(Attackable target, int itemId, long itemCount)
 	{
-		if (isInParty() && !ItemTable.getInstance().getTemplate(itemId).hasExImmediateEffect())
+		if (isInParty() && !ItemData.getInstance().getTemplate(itemId).hasExImmediateEffect())
 		{
 			_party.distributeItem(this, itemId, itemCount, false, target);
 		}
@@ -4521,7 +4527,7 @@ public class Player extends Playable
 			{
 				handler.useItem(this, target, false);
 			}
-			ItemTable.getInstance().destroyItem("Consume", target, this, null);
+			ItemData.getInstance().destroyItem("Consume", target, this, null);
 		}
 		// Cursed Weapons are not distributed
 		else if (CursedWeaponsManager.getInstance().isCursed(target.getId()))
@@ -4562,7 +4568,7 @@ public class Player extends Playable
 			else if ((target.getId() == Inventory.ADENA_ID) && (_inventory.getAdenaInstance() != null))
 			{
 				addAdena("Pickup", target.getCount(), null, true);
-				ItemTable.getInstance().destroyItem("Pickup", target, this, null);
+				ItemData.getInstance().destroyItem("Pickup", target, this, null);
 			}
 			else
 			{
@@ -5073,7 +5079,7 @@ public class Player extends Playable
 			_lastDamageTaken.add(new DamageTakenHolder(attacker, skillId, damage));
 			if (_lastDamageTaken.size() > 20)
 			{
-				_lastDamageTaken.remove(0);
+				_lastDamageTaken.removeFirst();
 			}
 		}
 	}
@@ -6600,7 +6606,7 @@ public class Player extends Playable
 			statement.setInt(19, _raidbossPoints);
 			statement.setInt(20, _pvpKills);
 			statement.setInt(21, _pkKills);
-			statement.setInt(22, _clanId);
+			statement.setInt(22, getOgClanId());
 			statement.setInt(23, getRace().ordinal());
 			statement.setInt(24, getClassId().getId());
 			statement.setLong(25, _deleteTimer);
@@ -7268,7 +7274,7 @@ public class Player extends Playable
 			statement.setInt(21, _raidbossPoints);
 			statement.setInt(22, _pvpKills);
 			statement.setInt(23, _pkKills);
-			statement.setInt(24, _clanId);
+			statement.setInt(24, getOgClanId());
 			statement.setInt(25, getRace().ordinal());
 			statement.setInt(26, getClassId().getId());
 			statement.setLong(27, _deleteTimer);
@@ -8409,6 +8415,22 @@ public class Player extends Playable
 				}
 			}
 			
+			if (attackerPlayer.isMercenary())
+			{
+				if ((clan != null) && (attackerPlayer.getClanIdMercenary() == clan.getId()))
+				{
+					return false;
+				}
+				if (isMercenary() && (attackerPlayer.getClanIdMercenary() == getClanIdMercenary()))
+				{
+					return false;
+				}
+			}
+			else if ((attackerClan != null) && (attackerClan.getId() == getClanIdMercenary()))
+			{
+				return false;
+			}
+			
 			// Check if the Player is in an arena, but NOT siege zone. NOTE: This check comes before clan/ally checks, but after party checks.
 			// This is done because in arenas, clan/ally members can autoattack if they arent in party.
 			if ((isInsideZone(ZoneId.PVP) && attackerPlayer.isInsideZone(ZoneId.PVP)) && !(isInsideZone(ZoneId.SIEGE) && attackerPlayer.isInsideZone(ZoneId.SIEGE)))
@@ -8582,8 +8604,8 @@ public class Player extends Playable
 				sm = new SystemMessage(SystemMessageId.S1_IS_NOT_AVAILABLE_AT_THIS_TIME_BEING_PREPARED_FOR_REUSE);
 				sm.addSkillName(usedSkill);
 			}
-			
 			sendPacket(sm);
+			sendPacket(ActionFailed.STATIC_PACKET);
 			return false;
 		}
 		
@@ -8981,7 +9003,7 @@ public class Player extends Playable
 	{
 		for (int itemId : _activeSoulShots)
 		{
-			if (ItemTable.getInstance().getTemplate(itemId).getCrystalType().getLevel() == crystalType)
+			if (ItemData.getInstance().getTemplate(itemId).getCrystalType().getLevel() == crystalType)
 			{
 				disableAutoShot(itemId);
 			}
@@ -10290,14 +10312,6 @@ public class Player extends Playable
 			restoreEffects();
 		}
 		
-		// TODO : Need to fix that hack!
-		if (!isDead())
-		{
-			setCurrentCp(_originalCp);
-			setCurrentHp(_originalHp);
-			setCurrentMp(_originalMp);
-		}
-		
 		revalidateZone(true);
 		
 		notifyFriends(FriendStatus.MODE_ONLINE);
@@ -10347,6 +10361,18 @@ public class Player extends Playable
 		{
 			EventDispatcher.getInstance().notifyEventAsync(new OnPlayerMentorStatus(this, true), this);
 		}
+		
+		// TODO : Need to fix that hack!
+		if (!isDead())
+		{
+			// Run on a separate thread to give time to above events to be notified.
+			ThreadPool.schedule(() ->
+			{
+				setCurrentCp(_originalCp);
+				setCurrentHp(_originalHp);
+				setCurrentMp(_originalMp);
+			}, 300);
+		}
 	}
 	
 	public long getLastAccess()
@@ -10364,10 +10390,8 @@ public class Player extends Playable
 	{
 		super.doRevive();
 		
-		if (Config.DISCONNECT_AFTER_DEATH)
-		{
-			DecayTaskManager.getInstance().cancel(this);
-		}
+		// Stop decay task.
+		DecayTaskManager.getInstance().cancel(this);
 		
 		sendPacket(new EtcStatusUpdate(this));
 		_revivePet = false;
@@ -14803,19 +14827,19 @@ public class Player extends Playable
 				final Skill knownSkill = getKnownSkill(shortcut.getId());
 				if (knownSkill != null)
 				{
-					sendPacket(new ExActivateAutoShortcut(shortcut, true));
+					shortcut.setAutoUse(true);
 				}
 			}
 			else if (shortcut.getType() == ShortcutType.ACTION)
 			{
-				sendPacket(new ExActivateAutoShortcut(shortcut, true));
+				shortcut.setAutoUse(true);
 			}
 			else
 			{
 				final Item item = getInventory().getItemByObjectId(shortcut.getId());
 				if (item != null)
 				{
-					sendPacket(new ExActivateAutoShortcut(shortcut, true));
+					shortcut.setAutoUse(true);
 				}
 			}
 		}
@@ -14839,7 +14863,7 @@ public class Player extends Playable
 			
 			if (shortcut.getType() == ShortcutType.ACTION)
 			{
-				sendPacket(new ExActivateAutoShortcut(shortcut, true));
+				shortcut.setAutoUse(true);
 				AutoUseTaskManager.getInstance().addAutoAction(this, shortcut.getId());
 				continue;
 			}
@@ -14848,7 +14872,6 @@ public class Player extends Playable
 			if (knownSkill != null)
 			{
 				shortcut.setAutoUse(true);
-				sendPacket(new ExActivateAutoShortcut(shortcut, true));
 				if (knownSkill.isBad())
 				{
 					AutoUseTaskManager.getInstance().addAutoSkill(this, shortcut.getId());
@@ -14864,7 +14887,6 @@ public class Player extends Playable
 				if (item != null)
 				{
 					shortcut.setAutoUse(true);
-					sendPacket(new ExActivateAutoShortcut(shortcut, true));
 					if (item.isPotion())
 					{
 						AutoUseTaskManager.getInstance().setAutoPotionItem(this, item.getId());
@@ -15247,5 +15269,97 @@ public class Player extends Playable
 			
 			_statIncreaseSkillTask = null;
 		}, 500);
+	}
+	
+	private int getOgClanId()
+	{
+		if (isMercenary())
+		{
+			return _clanIdOg;
+		}
+		return _clanId;
+	}
+	
+	public void setMercenary(boolean update, int clanId)
+	{
+		final Clan clan = ClanTable.getInstance().getClan(clanId);
+		if (update)
+		{
+			final String name = clan.createMercenary(getObjectId(), _baseClass);
+			setMercenary(update);
+			getVariables().set("MercenaryClan", clanId);
+			_mercenaryName = name;
+			_clanIdMercenary = clanId;
+			setClanMercenary(clan);
+		}
+		else
+		{
+			clan.removeMercenaryByPlayerId(getObjectId());
+			setMercenary(update);
+			getVariables().remove("MercenaryClan");
+			_mercenaryName = "";
+			_clanIdMercenary = 0;
+			setClan(_clanOg);
+		}
+		broadcastUserInfo();
+	}
+	
+	public void updateMercenary()
+	{
+		final int clanId = getVariables().getInt("MercenaryClan");
+		final Clan clan = ClanTable.getInstance().getClan(clanId);
+		_clanIdMercenary = clanId;
+		_mercenaryName = clan.getMapMercenary().get(getObjectId()).getName();
+		setClanMercenary(clan);
+	}
+	
+	public void setClanMercenary(Clan clan)
+	{
+		if (_clan != null)
+		{
+			_clanOg = _clan;
+			_clanIdOg = _clan.getId();
+		}
+		_clan = clan;
+		if (clan == null)
+		{
+			setTitle("");
+			_clanId = 0;
+			_clanPrivileges = new EnumIntBitmask<>(ClanPrivilege.class, false);
+			_pledgeType = 0;
+			_powerGrade = 0;
+			_lvlJoinedAcademy = 0;
+			_apprentice = 0;
+			_sponsor = 0;
+			_activeWarehouse = null;
+			return;
+		}
+		_clanId = clan.getId();
+	}
+	
+	public String getMercenaryName()
+	{
+		if (_mercenaryName == null)
+		{
+			final int clanId = getVariables().getInt("MercenaryClan");
+			final Clan clan = ClanTable.getInstance().getClan(clanId);
+			_mercenaryName = clan.getMapMercenary().get(getObjectId()).getName();
+		}
+		return _mercenaryName;
+	}
+	
+	public int getClanIdMercenary()
+	{
+		return _clanIdMercenary;
+	}
+	
+	public void setMercenary(boolean update)
+	{
+		getVariables().set("isMercenary", update);
+	}
+	
+	public boolean isMercenary()
+	{
+		return getVariables().getBoolean("isMercenary", false);
 	}
 }
